# CIMS-backend

./: .env.example  Dockerfile  Dockerfile.mcp  MOCK_DATA_README.md  docker-compose.yaml  inject_mock_data.py  preview_mock_data.py  pyproject.toml  requirements.dev.in  requirements.in  requirements.txt  reset_db.py  setup_and_inject.sh  setup_mock_data.py
app/: auth.py  config.py  deps.py  main.py
app/api/v1/: area.py  auth.py  candidate.py  customer.py  expertise.py  field.py  headhunter.py  level.py  nominee.py  project.py
app/clients/sqlalchemy/: area_repository.py  candidate_repository.py  customer_repository.py  expertise_repository.py  field_repository.py  headhunter_repository.py  level_repository.py  nominee_repository.py  project_repository.py
app/core/entities/: area.py  candidate.py  customer.py  headhunter.py  project.py
app/database/: models.py  session.py
app/domain/: entities.py  exceptions.py
app/infrastructure/: auth.py  config.py
app/schemas/: __init__.py  area.py  auth.py  candidate.py  customer.py  expertise.py  field.py  headhunter.py  level.py  nominee.py  project.py  utils.py
app/usecases/: authentication.py
src/cims/: __init__.py  auth.py  config.py  deps.py  main.py  mcp_server.py
tests/: README.md  conftest.py  requirements-test.txt
tests/functional/: test_area_api.py  test_auth_api.py  test_candidate_api.py  test_customer_api.py  test_expertise_api.py  test_field_api.py  test_headhunter_api.py  test_level_api.py  test_nominee_api.py  test_project_api.py  test_token_fix.py
tests/unit/: test_schemas.py
(+123 files in other folders)
